--- a/src/main/resources/templates/TermsofService.html
+++ b/src/main/resources/templates/TermsofService.html
@@ -283,10 +283,10 @@
 
                 <!-- Auth Buttons -->
                 <div class="nav-auth">
-                    <a th:href="@{/signIn}" class="btn btn-login">
+                    <a th:href="@{/auth/signIn}" class="btn btn-login">
                         <i class="fas fa-sign-in-alt"></i> Sign In
                     </a>
-                    <a th:href="@{/signUp}" class="btn btn-signup">
+                    <a th:href="@{/auth/signUp}" class="btn btn-signup">
                         <i class="fas fa-user-plus"></i> Sign Up
                     </a>
                 </div>
@@ -305,7 +305,7 @@
     <div class="terms-container">
         <div class="terms-header">
             <h1>Terms and Conditions</h1>
-            <p>Last Updated: January 1, 2025</p>
+            <p>Last Updated: January 1, 2026</p>
         </div>
 
         <div class="terms-content">
@@ -406,7 +406,7 @@
             </div>
 
             <div class="last-updated">
-                <p>These Terms and Conditions were last updated on January 1, 2025.</p>
+                <p>These Terms and Conditions were last updated on January 1, 2026.</p>
             </div>
         </div>
     </div>
@@ -430,8 +430,8 @@
                 <ul>
                     <li><a th:href="@{/}"><i class="fas fa-home"></i> Home</a></li>
                     <li><a th:href="@{/#features}"><i class="fas fa-star"></i> Features</a></li>
-                    <li><a th:href="@{/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
-                    <li><a th:href="@{/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                    <li><a th:href="@{/auth/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+                    <li><a th:href="@{/auth/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -452,7 +452,7 @@
         </div>
         <div class="footer-bottom">
             <p>
-                &copy; 2025 SpendSnap.in . All rights reserved.
+                &copy; 2026 SpendSnap.in . All rights reserved.
             </p>
         </div>
     </div>
