--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -148,10 +148,10 @@
 
                 <!-- Auth Buttons -->
                 <div class="nav-auth">
-                    <a th:href="@{/signIn}" class="btn btn-login">
+                    <a th:href="@{/auth/signIn}" class="btn btn-login">
                         <i class="fas fa-sign-in-alt"></i> Sign In
                     </a>
-                    <a th:href="@{/signUp}" class="btn btn-signup">
+                    <a th:href="@{/auth/signUp}" class="btn btn-signup">
                         <i class="fas fa-user-plus"></i> Sign Up
                     </a>
                 </div>
@@ -183,7 +183,7 @@
                         Get clear insights into your spending habits with our intuitive interface and powerful analytics.
                     </p>
                     <div class="hero-buttons">
-                        <a th:href="@{/signUp}" class="btn btn-primary">
+                        <a th:href="@{/auth/signUp}" class="btn btn-primary">
                             <i class="fas fa-rocket"></i>
                             Get Started - It's Free
                         </a>
@@ -401,8 +401,8 @@
                     <ul>
                         <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
                         <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
-                        <li><a th:href="@{/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
-                        <li><a th:href="@{/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                        <li><a th:href="@{/auth/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+                        <li><a th:href="@{/auth/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -423,7 +423,7 @@
             </div>
             <div class="footer-bottom">
                 <p>
-                    &copy; 2025 SpendSnap.in . All rights reserved.
+                    &copy; 2026 SpendSnap.in . All rights reserved.
                 </p>
             </div>
         </div>
