--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -301,10 +301,10 @@
 
                 <!-- Auth Buttons -->
                 <div class="nav-auth">
-                    <a th:href="@{/signIn}" class="btn btn-login">
+                    <a th:href="@{/auth/signIn}" class="btn btn-login">
                         <i class="fas fa-sign-in-alt"></i> Sign In
                     </a>
-                    <a th:href="@{/signUp}" class="btn btn-signup">
+                    <a th:href="@{/auth/signUp}" class="btn btn-signup">
                         <i class="fas fa-user-plus"></i> Sign Up
                     </a>
                 </div>
@@ -423,8 +423,8 @@
                 <ul>
                     <li><a th:href="@{/}"><i class="fas fa-home"></i> Home</a></li>
                     <li><a th:href="@{/#features}"><i class="fas fa-star"></i> Features</a></li>
-                    <li><a th:href="@{/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
-                    <li><a th:href="@{/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                    <li><a th:href="@{/auth/signIn}"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+                    <li><a th:href="@{/auth/signUp}"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                 </ul>
             </div>
             <div class="footer-section">
