--- a/src/main/resources/templates/Authentication/forgot-password.html
+++ b/src/main/resources/templates/Authentication/forgot-password.html
@@ -137,6 +137,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{/js/forgot-password.js}" defer></script>
+<script th:src="@{/js/forgotPassword.js}" defer></script>
 </body>
 </html>
