COnfig a /auth to all position where error occure

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -31,7 +31,7 @@
 
         <div class="error-actions">
             <a th:href="@{/}" class="home-button">🔧 Return to Home</a>
-            <a th:href="@{/contact}" class="support-button">📨 Report Issue</a>
+            <a th:href="@{/}" class="support-button">📨 Report Issue</a>
         </div>
     </div>
 </div>
