--- a/src/main/resources/templates/error/403_duplicate.html
+++ b/src/main/resources/templates/error/403_duplicate.html
@@ -66,7 +66,7 @@
                 Return to Base
             </a>
 
-            <a th:href="@{/signin}" class="login-button">
+            <a th:href="@{/auth/signin}" class="login-button">
                 <span class="button-icon">🔑</span>
                 Get Clearance
             </a>
